--- a/Vacatures.html
+++ b/Vacatures.html
@@ -16,7 +16,7 @@
             <input type="email" placeholder="Email">
             <input type="Submit">
         <ul>
-            <li style="float:left"><img id="logoimage" src="Logo.png"></li>
+            <li style="float:left"><img id="logoimage" src="4-logo-70.png"></li>
             <li style="float:left"><h1 id="logo">CHRISTEFANO'S</h1></li>
             <li><a href="Vacatures.html">VACATURES</a></li>
             <li><a href="Gallerij.html">GALLERIJ</a></li>
