--- a/Drankmenu.html
+++ b/Drankmenu.html
@@ -49,8 +49,8 @@
         <ul>
            <li style="float:left"><img id="logoimage" src="4-logo-70.png"></li>
             <li style="float:left"><h1 id="logo">Christefano's</h1></li>
-            <li><a href="Drankmenu.html">DRANK MENU</a></li>
-            <li><a class="active" href="Dinermenu.html">DINER MENU</a></li>
+            <li><a class="active" href="Drankmenu.html">DRANK MENU</a></li>
+            <li><a href="Dinermenu.html">DINER MENU</a></li>
             <li><a href="Menu.html">TERUG NAAR MENU</a></li>
             <li><a href="index.html">HOME</a></li>
         </ul>
