--- a/Vacatures.html
+++ b/Vacatures.html
@@ -18,11 +18,11 @@
         <ul>
             <li style="float:left"><img id="logoimage" src="4-logo-70.png"></li>
             <li style="float:left"><h1 id="logo">CHRISTEFANO'S</h1></li>
-            <li><a href="Vacatures.html">VACATURES</a></li>
+            <li><a class="active" href="Vacatures.html">VACATURES</a></li>
             <li><a href="Gallerij.html">GALLERIJ</a></li>
             <li><a href="Informatie.html">INFORMATIE</a></li>
             <li><a href="Menu.html">MENU</a></li>
-            <li><a class="active" href="index.html">HOME</a></li>
+            <li><a href="index.html">HOME</a></li>
         </ul>
     </body>
 </html>
