--- a/Vacatures.html
+++ b/Vacatures.html
@@ -13,7 +13,7 @@
         <h1 id="titel">Vacatures</h1>
         <br>
        <p>Vul hier email in voor vacature</p>
-            <input type="email" placeholder="Email">
+            <input type="email" id="emailstrook" placeholder="Email">
             <input type="Submit">
         <ul>
             <li style="float:left"><img id="logoimage" src="4-logo-70.png"></li>
